package io.github.team10.escapefromuni;

/**
 * OLD ENUM
 * Represents the 4 possible directions/positions a {@link Door} connecting rooms can have.
 */
public enum DoorDirection {
    NORTH,
    EAST,
    SOUTH,
    WEST
}
