package io.github.team10.escapefromuni;

public enum EventType {
    POSITIVE,
    NEGATIVE,
    HIDDEN,
    NONE
}
