@startuml RoomManager

class RoomManager {
    - startingRoom: Room
    - currentRoom: Room
    - doors: Door[4]
    + initialiseMap()
    + changeRoom(direction: DoorDirection)
    - unloadCurrentRoom()
    - initialiseDoors()
    - updateDoors()
    - updateEventIndicators()
}

class Room {
    + roomManager: RoomManager
    + event: Event
    + adjacentRooms: Room[4]
    + getEventType(): EventType
    + start()
}

class Door {
    + enabled: boolean
    + roomManager: RoomManager
    + direction: DoorDirection
    + interact()
}

note right of Door
Persistent object.
Visibility toggled per room.
end note

class Event
class EventType

enum DoorDirection {
    NORTH = 0
    EAST = 1
    SOUTH = 2
    WEST = 3
}

RoomManager "1" *-- "1..*" Room : manages >
RoomManager "1" *-- "4" Door : controls >
Room "1" --> "1" RoomManager
Door "1" --> "1" RoomManager
Room "1..4" -- "1..4" Room : adjacentRooms
Room "1" *-- "0..1" Event : owns >
Door "1" --> "1" DoorDirection : has >
@enduml